--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "~3.8.2"
   },
