--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.5",
-
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "react": "^16.13.1",
@@ -41,6 +39,8 @@
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.7",
     "@types/jest": "^26.0.0",
+    "@types/react": "^16.9.52",
+    "@types/react-router-dom": "^5.1.6",
     "jest-environment-jsdom-sixteen": "^1.0.3"
   }
 }
